--- a/index.html
+++ b/index.html
@@ -3018,6 +3018,150 @@
       </a>
     </div>
   </div>
+  <!-- Caso Marmolería -->
+<div id="caso-marmoleria" class="case-study animate-fade-in">
+  <div class="case-content">
+    <span class="case-category">Construcción · Materiales</span>
+    <h2 class="case-title">Marmolería Moderna – Rediseño Web</h2>
+
+    <div class="case-problem">
+      <h4>El problema</h4>
+      <p>
+        Sitio desactualizado, sin jerarquía visual ni diferenciación.
+        Dificultad para transmitir calidad del material y generar consultas.
+      </p>
+    </div>
+
+    <div class="case-solution">
+      <h4>La solución</h4>
+      <p>
+        Rediseño web moderno y minimalista, con foco en materiales,
+        proyectos realizados y llamados a la acción claros vía WhatsApp.
+      </p>
+    </div>
+
+    <div class="case-results">
+      <div class="result-item">
+        <div class="result-value">+65%</div>
+        <div class="result-label">Consultas estimadas</div>
+      </div>
+      <div class="result-item">
+        <div class="result-value">-40%</div>
+        <div class="result-label">Tiempo de decisión</div>
+      </div>
+      <div class="result-item">
+        <div class="result-value">+55%</div>
+        <div class="result-label">Percepción de calidad</div>
+      </div>
+    </div>
+
+    <span class="case-note">Rediseño conceptual basado en benchmarks del sector construcción.</span>
+  </div>
+
+  <div class="case-visual">
+    <img src="Pisososcuro.png" alt="Rediseño web marmolería" class="case-image" loading="lazy">
+    <div class="case-overlay">
+      <p class="overlay-text">Diseño orientado a mostrar materiales y generar confianza</p>
+    </div>
+  </div>
+</div>
+  <!-- Caso Editorial -->
+<div id="caso-editorial" class="case-study animate-fade-in">
+  <div class="case-content">
+    <span class="case-category">Editorial · UX/UI</span>
+    <h2 class="case-title">Editorial Digital – Plataforma de Contenidos</h2>
+
+    <div class="case-problem">
+      <h4>El problema</h4>
+      <p>
+        Exceso de contenido sin jerarquía clara.
+        Dificultad para encontrar artículos y retener lectores.
+      </p>
+    </div>
+
+    <div class="case-solution">
+      <h4>La solución</h4>
+      <p>
+        Rediseño UX con foco en lectura, navegación clara y estructura modular.
+        Tipografía optimizada y diseño minimalista.
+      </p>
+    </div>
+
+    <div class="case-results">
+      <div class="result-item">
+        <div class="result-value">+70%</div>
+        <div class="result-label">Tiempo de lectura</div>
+      </div>
+      <div class="result-item">
+        <div class="result-value">-50%</div>
+        <div class="result-label">Tasa de rebote</div>
+      </div>
+      <div class="result-item">
+        <div class="result-value">+60%</div>
+        <div class="result-label">Claridad de navegación</div>
+      </div>
+    </div>
+
+    <span class="case-note">Caso conceptual enfocado en experiencia de lectura y consumo de contenido.</span>
+  </div>
+
+  <div class="case-visual">
+    <img src="Editorial.png" alt="Rediseño editorial digital" class="case-image" loading="lazy">
+    <div class="case-overlay">
+      <p class="overlay-text">Diseño limpio orientado a lectura y contenido</p>
+    </div>
+  </div>
+</div>
+  <!-- Caso Productos Tech -->
+<div id="caso-tech" class="case-study animate-fade-in">
+  <div class="case-content">
+    <span class="case-category">Productos Tech · E-commerce</span>
+    <h2 class="case-title">Neobook – Página de Producto</h2>
+
+    <div class="case-problem">
+      <h4>El problema</h4>
+      <p>
+        Página de producto con exceso de información técnica
+        y bajo foco en beneficios reales para el usuario.
+      </p>
+    </div>
+
+    <div class="case-solution">
+      <h4>La solución</h4>
+      <p>
+        Diseño minimalista tipo Apple, jerarquía clara,
+        storytelling visual y CTA visibles orientados a conversión.
+      </p>
+    </div>
+
+    <div class="case-results">
+      <div class="result-item">
+        <div class="result-value">+85%</div>
+        <div class="result-label">Interacción</div>
+      </div>
+      <div class="result-item">
+        <div class="result-value">-35%</div>
+        <div class="result-label">Abandono</div>
+      </div>
+      <div class="result-item">
+        <div class="result-value">+50%</div>
+        <div class="result-label">Intención de compra</div>
+      </div>
+    </div>
+
+    <span class="case-note">Rediseño conceptual enfocado en experiencia premium de producto.</span>
+  </div>
+
+  <div class="case-visual">
+    <img src="tech.png" alt="Página de producto tech" class="case-image" loading="lazy">
+    <div class="case-overlay">
+      <p class="overlay-text">Experiencia de producto premium y minimalista</p>
+    </div>
+  </div>
+</div>
+
+
+
 
   <!-- SECCIÓN "CÓMO TRABAJO" -->
   <section class="how-i-work">
