--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   
   <!-- CSS personalizado -->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="src/styles">
   
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
