--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <!-- CSS -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="src/styles/styles.css">
     
     <!-- Favicon similar a Portfoliobox -->
     <link rel="icon" type="image/x-icon" href="https://assets.portfoliobox.net/assets/webclip-79ffc975b241f9fad38592dab49cd224.png">
