--- a/index.html
+++ b/index.html
@@ -415,15 +415,15 @@
                         </a>
                         <!-- Dropdown para escritorio -->
                         <div class="pb-dropdown" id="servicesMenu">
-                            <a href="#servicios-uxui" class="pb-dropdown-link">
+                            <a href="ui-ux-design.html" class="pb-dropdown-link">
                                 <i class="fas fa-pencil-ruler"></i>
                                 <span>Diseño UX/UI</span>
                             </a>
-                            <a href="#servicios-estrategia" class="pb-dropdown-link">
+                            <a href="template-producto.html" class="pb-dropdown-link">
                                 <i class="fas fa-chart-line"></i>
                                 <span>Estrategia de Producto</span>
                             </a>
-                            <a href="#servicios-mobile" class="pb-dropdown-link">
+                            <a href="servicio-apps-moviles.html" class="pb-dropdown-link">
                                 <i class="fas fa-mobile-alt"></i>
                                 <span>Diseño Mobile</span>
                             </a>
