Add 'Herramientas' link to navigation and footer

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <div class="dd-nav-center">
                     <a href="#proyectos" class="dd-nav-link">Proyectos</a>
                     <a href="#servicios" class="dd-nav-link">Servicios</a>
+                    <a href="#herramientas" class="dd-nav-link">Herramientas</a>
                     <a href="#certificaciones" class="dd-nav-link">Certificaciones</a>
                     <a href="#proceso" class="dd-nav-link">Proceso</a>
                     <a href="#testimonios" class="dd-nav-link">Testimonios</a>
@@ -1116,6 +1117,7 @@
                         <h4 class="dd-footer-title">NAVEGACIÓN</h4>
                         <a href="#proyectos" class="dd-footer-link">Proyectos</a>
                         <a href="#servicios" class="dd-footer-link">Servicios</a>
+                        <a href="#herramientas" class="dd-nav-link">Herramientas</a>
                         <a href="#certificaciones" class="dd-footer-link">Certificaciones</a>
                         <a href="#proceso" class="dd-footer-link">Proceso</a>
                         <a href="#testimonios" class="dd-footer-link">Testimonios</a>
