Update title and Open Graph title for consistency

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>David Díaz | Senior UX/UI Designer</title>
+    <title>David Díaz | UX/UI Designer</title>
     <meta name="description" content="Portafolio premium de David Díaz - Especialista en diseño UX/UI que incrementa conversión +340% en productos digitales.">
     
     <!-- Open Graph -->
