Update footer logo with image and text

--- a/index.html
+++ b/index.html
@@ -908,10 +908,11 @@
             <div class="footer-content">
                 <!-- Columna principal -->
                 <div class="footer-main">
-                    <a href="#hero" class="logo logo-footer">
-                        <span class="logo-symbol">DD</span>
-                        <span class="logo-text">David Díaz</span>
-                    </a>
+                    <!-- En el footer -->
+<a href="#hero" class="logo logo-footer">
+    <img src="logo.png" alt="Logo David Díaz" class="logo-img">
+    <span class="logo-text">David Díaz</span>
+</a>
                     <p class="footer-tagline">Diseño UX/UI que multiplica ingresos</p>
                     
                     <!-- CTA final -->
