Update image sources in gallery section

--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
 
     <div class="gallery-grid">
   <div class="gallery-item">
-    <img src="Pisosclaro.jpg" alt="Exploración UI clara">
+    <img src="Pisosclaro.png" alt="Exploración UI clara">
   </div>
 
   <div class="gallery-item">
-    <img src="Pisososcuro.jpg" alt="Exploración UI oscura">
+    <img src="Pisososcuro.png" alt="Exploración UI oscura">
   </div>
 
   <div class="gallery-item">
