Update links for servicios and cotizacion pages

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <a href="/blog.html" class="nav-link">
                         <i class="fas fa-newspaper"></i> Blog
                     </a>
-                    <a href="/servicios.html" class="nav-link">
+                    <a href="servicios/servicios.html" class="nav-link">
                         <i class="fas fa-cogs"></i> Servicios
                     </a>
                 </div>
@@ -703,7 +703,7 @@
                                 </div>
                             </a>
                             
-                            <a href="/servicio-diseno-ui-ux.html" class="certification-item" title="Ver todos los servicios">
+                            <a href="servicios/servicio-diseno-ui-ux.html" class="certification-item" title="Ver todos los servicios">
                                 <div class="certification-logo">
                                     <i class="fas fa-ellipsis-h"></i>
                                 </div>
@@ -1096,9 +1096,9 @@
                     <div class="footer-column">
                         <h4>Recursos</h4>
                         <a href="/blog.html">Blog</a>
-                        <a href="/servicios.html">Servicios</a>
-                        <a href="/cotizacion.html">Cotización</a>
-                        <a href="/ejemplos-amazon.html">Ejemplos</a>
+                        <a href="servicios/servicios.html">Servicios</a>
+                        <a href="cotizaciones/cotizacion.html">Cotización</a>
+                        <a href="ejemplos-amazon.html">Ejemplos</a>
                     </div>
                     
                     <div class="footer-column">
