Update blog link paths in index.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <a href="#sobre-mi" class="nav-link">
                         <i class="fas fa-user-tie"></i> Experiencia
                     </a>
-                    <a href="/blog.html" class="nav-link">
+                    <a href="blog/blog.html" class="nav-link">
                         <i class="fas fa-newspaper"></i> Blog
                     </a>
                     <a href="servicios/servicios.html" class="nav-link">
@@ -1095,7 +1095,7 @@
                     
                     <div class="footer-column">
                         <h4>Recursos</h4>
-                        <a href="/blog.html">Blog</a>
+                        <a href="blog/blog.html">Blog</a>
                         <a href="servicios/servicios.html">Servicios</a>
                         <a href="cotizaciones/cotizacion.html">Cotización</a>
                         <a href="ejemplos-amazon.html">Ejemplos</a>
