--- a/index.html
+++ b/index.html
@@ -1105,7 +1105,7 @@
                         <h4>Contacto</h4>
                         <a href="mailto:david.diaz.uxdata@gmail.com">Email</a>
                         <a href="https://calendly.com/dsd228-dd/30min" target="_blank">Calendly</a>
-                        <a href="https://github.com/dsd228" target="_blank">GitHub</a>
+                        <a href="https://dsd228.github.io/dsd228/" target="_blank">GitHub</a>
                         <a href="https://www.linkedin.com/in/david-diaz-ux-data/" target="_blank">LinkedIn</a>
                     </div>
                 </div>
