--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="David Díaz | Diseño UX/UI que multiplica ingresos +340%">
     <meta property="og:description" content="Transformo productos digitales con diseño estratégico. +340% conversión promedio, resultados en 8 semanas.">
     <meta property="og:image" content="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80">
-    <meta property="og:url" content="https://daviddiaz.design">
+    <meta property="og:url" content="https://github.com/dsd228">
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
